# TabStruct

./: README.md  pyproject.toml
docs/wiki/: conf.py  index.rst
docs/wiki/_media/: framework_model.drawio
docs/wiki/guide/: quickstart.rst
docs/wiki/reference/: api.rst
scripts/git/: release.sh
src/tabstruct/generation/notebooks/mini_usecase/: cd_mixed_data.ipynb
