[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Xiangjian Jiang", email = "silencejiang12138@gmail.com"},
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
]
description = "TabStruct is a comprehensive benchmark suite for tabular data generation, prediction, and evaluation."
keywords = ["tabular data", "synthetic data", "data generation", "causal structures", "machine learning"]
license = {file = "LICENSE"}
name = "tabstruct"
readme = "README.md"
requires-python = ">=3.10"
version = "2026.03.04"

dependencies = [
  "hatchling",
  "pytest",
  "flake8",
  "pylint",
  "setuptools",
  "sphinx",
  "myst-parser",
  "sphinx-rtd-theme",
  "sphinx-book-theme",
  "ipykernel",
  "build",
  "lightning",
  "lightning-utilities",
  "wrapt_timeout_decorator",
  "bnlearn",
  "causal-learn",
  "autogluon",
  "httplib2",
  "ucimlrepo",
  "thop",
  "sdmetrics",
  "wandb",
  "mostlyai-qa",
  "cleanlab",
  "nbconvert",
  "seaborn",
  "rtdl_revisiting_models",
  "tabpfn",
  "rich",
  "tabebm",
  "kaleido",
  "pymupdf",
  "tabcamel",
  "tabeval[all]",
]

[project.optional-dependencies]
dev = []

[tool.pytest.ini_options]
pythonpath = [
  ".",
]